fix theme on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,8 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #4B5B33;
   }
 }
 
